--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,19 @@
 *{
-    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 15px;
     padding: 1rem;
+    border-radius: 15px;
+    background-color: lightskyblue;
+    font-size: 1rem;
+
+}
+
+#resultTextDiv{
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding: 2.5rem;
+    margin: 25px;
+    word-wrap: break-word;
+    width: 250px;
+    text-align: center;
 }
